<resources>
    <string name="app_name" translatable="false">Flash Alert</string>


    <string name="facebook_app_id" translatable="false">facebook_app_id</string>

    <string name="link_privacy_policy" translatable="false">https://pages.flycricket.io/blood-pressure-track/privacy.html</string>

    <string name="txt_email_feedback" translatable="false">teammarketing@lutech.ltd</string>

    <string name="fb_login_protocol_scheme" translatable="false">fb852472952774405</string>


    //key test

    <string name="ads_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="flash_inters_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="flash_open_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <string name="intro_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="language_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="flash_alert_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="flash_light_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="turn_on_flash_native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>


    //key Real
    <!--        <string name="ads_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->

    <!--        <string name="flash_inters_id" translatable="false">ca-app-pub-9135490917790331/5872015765</string>-->

    <!--        <string name="flash_open_id" translatable="false">ca-app-pub-9135490917790331/6554542041</string>-->

    <!--        <string name="intro_native_id" translatable="false">ca-app-pub-9135490917790331/8654107680</string>-->

    <!--        <string name="language_native_id" translatable="false">ca-app-pub-9135490917790331/3928378702</string>-->

    <!--        <string name="flash_alert_native_id" translatable="false">ca-app-pub-9135490917790331/2615297032</string>-->

    <!--        <string name="flash_light_native_id" translatable="false">ca-app-pub-9135490917790331/6466874149</string>-->

    <!--        <string name="turn_on_flash_native_id" translatable="false">ca-app-pub-9135490917790331/3130302359</string>-->


    //Language
    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="french" translatable="false">Français</string>
    <string name="india" translatable="false">हिन्दी</string>
    <string name="spain" translatable="false">Español</string>
    <string name="portugal" translatable="false">Português</string>
    <string name="germany" translatable="false">Deutsch</string>
    <string name="italy" translatable="false">Italiano</string>
    <string name="japan" translatable="false">日本</string>

    <string name="uae" translatable="false">عربي</string>
    <string name="israel" translatable="false">עִברִית</string>
    <string name="korea" translatable="false">한국인</string>
    <string name="nederland" translatable="false">Nederlands</string>

    <string name="sounth_african" translatable="false">Afrikaans</string>
    <string name="georgian" translatable="false">Georgian</string>
    <string name="polish" translatable="false">Polish</string>
    <string name="turkish" translatable="false">Turkish</string>
    <string name="hausa" translatable="false">Hausa</string>
    <string name="chinese" translatable="false">中国人</string>

    //String
    <string name="txt_share_app">Share App</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_feedback_app">"Feedback App : "</string>
    <string name="txt_write_your_feedback_here">Write your feedback here</string>
    <string name="txt_language">Language</string>
    <string name="txt_toast_ads">This action can contain ads</string>
    <string name="txt_loading_ads">loading ads</string>
    <string name="title_warning_version">Your application version too low. Please update newest version to experience our app. Thanks</string>
    <string name="txt_goto_store">I agree and go to update</string>
    <string name="txt_do_later">Ask me later</string>
    <string name="txt_please_check_internet_connection">Please check internet connection</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_no_internet_connection">No Internet Connection</string>
    <string name="txt_enjoying_the_app">DO YOU LIKE OUR APP?</string>
    <string name="txt_maybe_later">Maybe Later</string>
    <string name="txt_press_again_to_exit">Press again to exit</string>
    <string name="txt_settings">Setting</string>
    <string name="txt_welcome_to_back">Welcome Back</string>
    <string name="txt_update">Update</string>
    <string name="txt_flash_alert">Flash Alert</string>
    <string name="txt_flash_light">Flash Light</string>
    <string name="txt_guide">Guide</string>
    <string name="txt_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_status_on">Status: On</string>
    <string name="txt_turn_on_for_incoming_calls">Turn On For Incoming Calls</string>
    <string name="txt_turn_on_for_sms">Turn On For SMS</string>
    <string name="txt_turn_on_for_amp_notification"><![CDATA[Turn On For & Notification]]></string>
    <string name="txt_on_time">On time</string>
    <string name="txt_off_time">Off time</string>
    <string name="txt_normal">Normal</string>
    <string name="txt_vibrate">Vibrate</string>
    <string name="txt_silent">Silent</string>
    <string name="txt_second">seconds</string>
    <string name="txt_flash_is_on_press_the_off_button_to_stop">Flash is on.Press the \'\'OFF\'\' button to stop</string>
    <string name="txt_status">STATUS</string>
    <string name="txt_speed">SPEED</string>
    <string name="txt_test">Test</string>
    <string name="txt_request_permissions">Request permissions</string>
    <string name="txt_content_permission">For the flash to work you need to give camera and phone access. This permission does not affect the phone at all so please rest assured</string>
    <string name="txt_ok">OK</string>
    <string name="txt_stop">Stop</string>
    <string name="txt_installing">Installing...</string>
    <string name="txt_flash_call_ntallation_successful">Flash call installation successful!</string>
    <string name="txt_try_it">TRY IT</string>
    <string name="txt_incoming_call">Incoming Call....</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_delince">Reject</string>
    <string name="txt_install_successfully">Install successfully</string>
    <string name="txt_please_allow_notification_access">Please allow notification access.</string>
    <string name="txt_you_need_to_grant_notification_access_to_enalble_this_feature">You need to grant Notification Access to enalble this feature.</string>
    <string name="notification_listener_service">FlashLight Notification Rules</string>
    <string name="txt_status_off">Status: Off</string>
    <string name="txt_advanced">ADVANCED</string>
    <string name="txt_do_not_flash_the_flash_while_the_screen_is_on">Do not flash the flash while the screen is on</string>
    <string name="txt_save_battery">Save Battery</string>
    <string name="txt_turn_off_flash_when_battery_is_low">Turn off flash when battery is low</string>
    <string name="txt_policy">Policy</string>
    <string name="txt_share">Share</string>
    <string name="txt_how_to_remove_this_application_from_the_restricted_list_of_power">How to remove this application from the restricted list of power</string>
    <string name="txt_why_this_app_not_flashing">Why this app not flashing or not flashing sometimes</string>
    <string name="txt_how_to_avoid_accidentally">How to avoid accidentally closing this app?</string>
    <string name="txt_what_permissions_does_this_app_require">What permissions does this app require?</string>
    <string name="txt_quest_how_to_remove_this_application_from_the_restricted_list_of_power">How to remove this application from the restriced list of power saving features on the phone?</string>
    <string name="txt_quest_why_this_app_not_flashing">Why this app not flashing or not flashing sometimes?</string>
    <string name="txt_quest_what_permissions_does_this_app_require">What permissions does this app require?</string>
    <string name="txt_answer_how_to_remove_this_application_from_the_restricted_list_of_power">General guide:</string>

    <string name="txt_answer_why_this_app_not_flashing"><![CDATA[ 1. This application was accidentally <br/> <br/>2. On some phones, the phone\'s battery optimizer did not allow the app to run in the background, causing this app to stop working. <br/> <br/>3. When the phone indicats low battery level and you activate the power saving feature, this application may stop working. \n4. When you shutdown and restart your phone, on some devices this app may not be able to restart itself. <br/> <br/>5. In any case, when this application is closed and not working, you just need to reopen this application.]]></string>
    <string name="txt_answer_how_to_avoid_accidentally">
        Locking this app on the multitasking manager can make this app work better, keep it active all the time, avoid this app being closed accidentally (disabled and inoperable).
    </string>
    <string name="txt_answer_what_permissions_does_this_app_require"><![CDATA[<b> Call management: </b> Enable this permission, when you having incoming calls, we can flash to notify you <br/> <br/> <b>Notifications:</b> Enable this permission so that we can notify battery status Background running: Enable this permission to keep the flash of incoming call and battery detection working stably <br/><br/> <b>Notification Access:</b> Enable this permission so that we can flash when you receive messages from other applications <br/><br/><b>Display Permission:</b> Enable this permission so that we can show notifications appear on the top of screen <br/><br/> <b>Camera Access: </b> Enable this permission so that flashlight can work normally.]]></string>
    <string name="txt_alarm_flash_blinks_on_call_flashlight">Alarm flash blinks on call, flashlight</string>
    <string name="txt_next">NEXT</string>
    <string name="txt_thank_you">THANK YOU!</string>
    <string name="txt_content_thank">Thank you for using our App. Would you to post your review on store. This will help and motivate us a lot. See you soon!</string>
    <string name="txt_turn_on_the_camera_and_flash_light">Turn on the camera and flash light simultaneously</string>
    <string name="txt_turn_on_the_flash_light_creen">Turn on flashlight in off screen mode</string>
    <string name="txt_background_restriction"><![CDATA[> Background restriction]]></string>
    <string name="txt_battery"><![CDATA[> Battery]]></string>
    <string name="txt_go_to_phone_setting">- Go to:Phone setting</string>
    <string name="txt_select_off_or_unrestricted">->Select OFF or Unrestricted</string>


</resources>