<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/corner_16"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_enjoying_the_app"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"

        />

    <RatingBar
        android:id="@+id/rateus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:numStars="5"
        android:progressTint="@color/color_primary"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMaybeLater"
            style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="5"
            android:fontFamily="@font/roboto_regular"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/txt_maybe_later"
            android:textColor="@color/color_gray_menu_details" />

        <Button
            android:id="@+id/btnFeedback"
            style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="5"
            android:background="@drawable/corner_16"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_feedback"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>